--- a/site/index.html
+++ b/site/index.html
@@ -30,13 +30,13 @@
 
             <div id="quicklinksDiv" class="headerDiv">
                 <div class="quicklinksItemDiv">
-                    <a href="/projects/list">
+                    <a href="/projects/list.html">
                         <div class="quicklinksItem">Projects</div>
                     </a>
                 </div>
 
                 <div class="quicklinksItemDiv">
-                    <a href="/simplymac/operations">
+                    <a href="/simplymac/operations.html">
                         <div class="quicklinksItem">Simply Mac</div>
                     </a>
                 </div>
