--- a/site/simplymac/operations.html
+++ b/site/simplymac/operations.html
@@ -35,7 +35,7 @@
                     <p>FedEx Shortener</p>
                 </div>
                 <div class="c-content">A FedEx Tracking number shortener.</div>
-                <a href="/simplymac/fedexshortener" class="c-link round-edge" target="_blank"> Link</a>
+                <a href="/simplymac/fedexshortener.html" class="c-link round-edge" target="_blank"> Link</a>
             </div>
 
             <div class="container round-edge">
@@ -43,7 +43,7 @@
                     <p>Part Recieving</p>
                 </div>
                 <div class="c-content">A form to fill out when recieving parts. Not too useful at the moment.</div>
-                <a href="/simplymac/servicepart" class="c-link round-edge" target="_blank"> Link</a>
+                <a href="/simplymac/servicepart.html" class="c-link round-edge" target="_blank"> Link</a>
             </div>
 
             <div class="container round-edge">
@@ -51,7 +51,7 @@
                     <p>Simple Check-In</p>
                 </div>
                 <div class="c-content">Easy check-in forms both for RepairQ and GSX.</div>
-                <a href="/simplymac/simplecheckin" class="c-link round-edge" target="_blank"> Link</a>
+                <a href="/simplymac/simplecheckin.html" class="c-link round-edge" target="_blank"> Link</a>
             </div>
 
             <div class="container round-edge">
