--- a/site/simplymac/servicepart.html
+++ b/site/simplymac/servicepart.html
@@ -23,7 +23,7 @@
 
 <body>
     <header>
-        <a href="/simplymac/">
+        <a href="/simplymac/operations.html">
             <h1>Service Part Recieving</h1>
         </a>
     </header>
