--- a/site/simplymac/simplecheckin.html
+++ b/site/simplymac/simplecheckin.html
@@ -27,7 +27,7 @@
 
 <body>
     <header>
-        <a href="/simplymac/">
+        <a href="/simplymac/operations.html">
             <h1>Simple Check-In</h1>
         </a>
     </header>
