--- a/site/simplymac/fedexshortener.html
+++ b/site/simplymac/fedexshortener.html
@@ -55,7 +55,7 @@
 
     <body>
         <header>
-            <a href="/simplymac/"><h1>FedEx Tracking Number Shortener</h1></a>
+            <a href="/simplymac/operations.html"><h1>FedEx Tracking Number Shortener</h1></a>
         </header>
 
         <main>
